--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
   #title {
     background-color: #990011FF;
     color: #FCF6F5FF;
+    border: 2px solid #FCF6F5FF;
   }
   
   #navbar-title {
